--- a/tmall/index.html
+++ b/tmall/index.html
@@ -23,8 +23,8 @@
             <li class="block"><a href="">我的淘宝</a>
             <div class="triangle"></div>
             <ul class="menu">
-                <li class="submenu">已买到的宝贝</li>
-                <li class="submenu">已卖出的宝贝</li>
+                <li class="submenu"><a href="">已买到的宝贝</a></li>
+                <li class="submenu"><a href="">已卖出的宝贝</a></li>
             </ul>
             </li>
             <li class="block"><i class="iconfont icon-03f"></i><a href="">购物车0件</a>
@@ -32,8 +32,8 @@
             <li class="block"><a href="">收藏夹</a>
             <div class="triangle"></div>
             <ul class="menu">
-                <li class="submenu">收藏的宝贝</li>
-                <li class="submenu">收藏的店铺</li>
+                <li class="submenu"><a href="">收藏的宝贝</a></li>
+                <li class="submenu"><a href="">收藏的店铺</a></li>
             </ul>
             </li>
             <li id="solid"></li>
@@ -46,6 +46,122 @@
     </div>
 
 </div>
+<div id="logo-search">
+    <div class="wraper">
+        <div id="logo">
+            <img src="img/TB1EhdPmhnaK1RjSZFBXXcW7VXa-290-130.gif" alt="">
+        </div>
+        <div id="search">
+            <form action="index.html/kkkk" >
+                <input type="text" id="search-box" placeholder="搜索天猫 商品/品牌/店铺">
+                <button id="search-button">搜索</button>
+            </form>
+            <ul>
+                <li class="hot-search highhot">
+                    <a href="">针织衫</a></li>
+                <li class="hot-search">
+                    <a href="">针织衫</a></li>
+                <li class="hot-search">
+                    <a href="">针织衫</a></li>
+                <li class="hot-search highhot">
+                    <a href="">针织衫</a></li>
+                <li class="hot-search">
+                    <a href="">针织衫</a></li>
+                <li class="hot-search highhot">
+                    <a href="">针织衫</a></li>
+                <li class="hot-search">
+                    <a href="">针织衫</a></li>
+                <li class="hot-search">
+                    <a href="">针织衫</a></li>
+                <li class="hot-search">
+                    <a href="">针织衫</a></li>
+            </ul>
+        </div>
+        
+    </div>
+</div>
+<div id="main-menu">
+    <div class="wraper">
+        <div>
+            <ul id="nav">
+                <li><img class="img-nav" src="img/market.png" alt=""></li>
+                <li><img class="img-nav" src="img/international.png" alt=""></li>
+                <li><a href="">天猫会员</a></li>
+                <li><a href="">电器城</a></li>
+                <li><a href="">喵鲜生</a></li>
+                <li><a href="">医疗馆</a></li>
+                <li><a href="">营业厅</a></li>
+                <li><a href="">魅力惠</a></li>
+                <li><a href="">飞猪旅行</a></li>
+                <li><a href="">苏宁易购</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+<div id="banner">
+    <div class="wrapper">
+        <img src="img/banner1.jpg" alt="">
+        <div class="category-tab">
+            <div class="category-item">
+                <a href="" class="item1">商品分类</a>
+                <ul class="category">
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                    <li><a href="">女装 / 内衣</a></li>
+                </ul>
+            </div>
+            <div class="category-item">
+                <a href="" class="item2">天猫双十一</a>
+                <ul class="category category11">
+                    <li><a href="">潮流女装</a></li>
+                    <li><a href="">潮流女装</a></li>
+                    <li><a href="">潮流女装</a></li>
+                    <li><a href="">潮流女装</a></li>
+                    <li><a href="">潮流女装</a></li>
+                    <li><a href="">潮流女装</a></li>
+                    <li><a href="">潮流女装</a></li>
+                    <li><a href="">潮流女装</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="small-banner"></div>
+        <ul class="slider-nav">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</div>
+<div id="side-bar">
+    <ul>
+        <li class="chart">
+            <i class="iconfont icon-03f">
+            <div class="vip">
+                会员权益
+                <div class="triangle"></div>
+            </div>
+            </i>
+        </li>
+        <i class="iconfont icon-daohanglanmoshi02-copy"></i>
+        <li>
 
+        </li>
+        <li>
+
+        </li>
+    </ul>
+</div>
 </body>
 </html>
