--- a/js.html
+++ b/js.html
@@ -11,6 +11,113 @@
     document.write('hello world')
     var a = 5;
     console.log(a+6)
+
+
+    var s='农夫';
+    alert(a);
+
+    var s1='hello';
+    s1=s1+'world!';
+    console.log(s1);
+
+
+var condition =true;
+if(condition){
+    alert("我将出现")
+}
+condition=false;
+if(condition){
+    alert("我不会出现");
+}
+else{
+    alert("我会出现");
+}
+condition = "some string";
+if(contion){
+    alert("是一个布尔值")
+}
+ 
+var num
+if(isNaN(num)&&num){
+    alert("");
+}else{
+    if(""){
+        alert("");
+    }else{
+        if("");{
+            alert("");
+
+        }
+    }
+}
+
+switch(condition){
+    case 4:alert("");
+    case 3:alert("");
+}
+
+switch(condition){
+    case 5:alert("");
+    break;
+    case 3:alert("");
+    break;
+}
+
+
+/*循环类型*/
+
+/*while(true){
+    alert("")
+}*/
+/*  dor  循环*/
+for(var i=0;i<10;i++){
+    alert("");
+}
+
+
+function area(){
+    var a=1;
+}
+
+area();
+area();
+
+
+function anglearea(wide,high){
+    var area=wide*high/2;
+    if(isNaN(area)){
+        alert();
+    }else{
+        alert();
+    }
+}
+
+anglearea(12,8);
+
+
+
+/*函数返回值*//*在函数内部可以使用return语句将值返回给调用函数的上下文*/
+
+
+function calcanglearea(wide,high){
+    var area=wide*high/2;
+    if(isNaN(area)||!area){
+        return false;
+        alert("")
+    }else{
+        return area;
+    }
+}
+  
+
+  /*数组*/
+  var arr = [1,5,5];
+  console.log(0);        /*取出数组中的第一个数字*/
+
+  /*遍历输出*/
+for(var i=1;i<arr.length;i++){
+    console.log(i);
+}
 </script>
 </body>
 </html>
