--- a/tmall/js习题/4.3.4.html
+++ b/tmall/js习题/4.3.4.html
@@ -8,10 +8,18 @@
 </head>
 <body>
     
-
     <script>
-    var a=1
-    console.log(a)
+        var shulie=function(n){
+            for(var i=1;i<=n;i++){
+
+            for(var c=1;c<=i;c++){
+            document.write(c+'&nbsp;');
+            }
+            document.write('<br>')
+        }
+        }
+        shulie(10);
+        
     </script>
 </body>
 </html>
