--- a/tmall/index.html
+++ b/tmall/index.html
@@ -101,6 +101,9 @@
 <div id="banner">
     <div class="wrapper">
         <img src="img/banner1.jpg" alt="">
+        <div>
+        <img src="../tmall/DOM/img/1.jpg" alt="">
+        </div>
         <div class="category-tab">
             <div class="category-item">
                 <a href="" class="item1">商品分类</a>
@@ -163,5 +166,8 @@
         </li>
     </ul>
 </div>
+<script>
+
+</script>
 </body>
 </html>
