--- a/tmall/js习题/5.3.8？？？.html
+++ b/tmall/js习题/5.3.8？？？.html
@@ -18,8 +18,8 @@
     <script>
         var obutton=document.getElementById('butto'); /*这是定义一个对象 obutton*/
         /* 这是document下面的一个对象 后面是对象的方法 是通过id获取元素的*/
-               console.log(obutton);
-        obutton.onclick= function(){
+         //      console.log(obutton);
+       // obutton.onclick= function(){
         // console.log(123);
         //history.back();     }
     /*var num=0;
@@ -48,12 +48,14 @@
         timer(i)
     }        */     /*为什么没有实现延时输出的功能*/
 
-    /*var num=0;
+    var num=0;
     function yanshi(){
-        console.log(num++);
+           console.log(num++);
         setTimeout(yanshi,1000);
     }
-    yanshi();   /*这里的（）为什么不能加，不加括号就不是方法*/
+     
+  
+    yanshi(); /*这里的（）为什么不能加，不加括号就不是方法*/
 
 
     </script>
