--- a/滚动条.html
+++ b/滚动条.html
@@ -84,7 +84,7 @@
     }
     var showing = function(){
         var scrollLeft = $(".box").scrollLeft();
-        var clientwidth = $(".box").Width;
+        var clientwidth = $(".box").width;
         var scrollwidth = $(".box").get(0).scrollWidth;
         $(".left").show();
         $(".right").show();
