--- a/es6/箭头函数.html
+++ b/es6/箭头函数.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
     
+    // function foo(a){
+    //     console.log(a)
+    // }
+   
+    let foo = (a)=>{
+        console.log(a);
+    }
+     foo(1)
+    
+    </script>
 </body>
 </html>
