--- a/es6/promise.html
+++ b/es6/promise.html
@@ -7,12 +7,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>于是转身向山里走去</h1>
     <script>
-
-    {
-        var2qq.c f = 10;
-    }
-    console.log(f);
     </script>
 </body>
 </html>
