--- a/VUE/v-pre.html
+++ b/VUE/v-pre.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 <body>
-    <script>
 
-    {
-        var2qq.cf = 10;
-    }
-    console.log(f);
+
+
+
+    
+    <script>
+        
     </script>
 </body>
 </html>
