--- a/webpack/src/index.html
+++ b/webpack/src/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+    
+    </style>
 </head>
 <body>
     hello world
+    <img src="./img/banner1 (1).jpg" alt="">
   <div id="box"></div>
 </body>
 </html>
