--- a/VUE/v-on.html
+++ b/VUE/v-on.html
@@ -33,9 +33,9 @@
                     this.num+=key
                 }
             }
-            computed:{
-                sum()
-            }
+    //        computed:{
+       //         sum()
+     //       }
         })
     </script>
 </body>
