--- a/react/js/判断.html
+++ b/react/js/判断.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,13 +21,16 @@
 
     <script type="text/babel">
     function Foo(){
-
-        let textColor = {
-            color:"red"
+        let isShow = false;
+        let str = null;
+        if(isShow){
+            str = <Foo2/>
+        }else{
+            str = <FooP/>
         }
         return(
             <div>
-            <h1 style={textColor}>hello</h1>
+                {str}
             </div>
         )
     }
@@ -41,15 +44,32 @@
         }
         render(){
             return(
-                <div className={this.state.cName}>
+                <div>
                 {this.state.count}
                 </div>
             )
         }
     }
+    class FooP extends React.Component{
+      constructor(props) {
+        super(props);
+        this.state={
+          isShow:"foo2"
+        }
+      }
+      render(){
+        return (
+          <div>
+            {this.state.isShow == "foo" ? <Foo/> : <Foo2/>}
+          </div>
+        )
+        
+        
+      }
+    }
 
         ReactDOM.render(
-            <Foo2/>,
+            <Foo/>,
             document.getElementById('root')
         );
     </script>
